# BA

./: CMakeLists.txt  LICENSE
bal/: CMakeLists.txt  common.cpp
ceres/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp
g2o/: CMakeLists.txt  bundle_adjustment_g2o.cpp
